deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: loyalty-system-deployment
spec:
    replicas: 2
    selector:
        matchLabels:
            app: loyalty-system-app
    template:
        metadata:
            labels:
                app: loyalty-system-app
        spec:
            containers:
            - name: loyalty-system
              image: tramak/loyalty-system:latest
              ports:
                - name: web
                  containerPort: 8080
            readinessProbe:
              tcpSocket:
                port: 8080
              initialDelaySeconds: 60
              periodSeconds: 30
            livenessProbe:
              tcpSocket:
                port: 8080
              initialDelaySeconds: 60
              periodSeconds: 30
