service.yaml
apiVersion: v1
kind: Service
metadata:
    name: loyalty-system-service
spec:
    selector:
        app: loyalty-system-app
    ports:
        - protocol: TCP
            port: 8080
            targetPort: web
    type: NodePort
