ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loyalty-system-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: loyalty-system-service
              port: 
                number: 8080
